Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82191

QWindow::startSystemResize doesn't work on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.0 Beta1
    • 5.15.0 Alpha
    • GUI: Window management
    • None
    • Windows 10 1909 18363.657 x64, VS2019 16.4.5
    • Windows
    • f9781514d5fc3e2283130a5c7f4ffb2ad6f11922 (qt/qtbase/5.15)

      Minimal re-producable project attached.

      Steps to re-produce: Build & Run -> Drag the window borders

      Expected behavior: window start resizing

      Actual behavior: nothing happens and no warning or error messages are printed to the console

      Not tested on Linux and macOS.

      Related change: "Add QWindow::startSystemMove and startSystemResize" a611c632bb906cf77dd3af29ddd7b166f79ad1b0 https://codereview.qt-project.org/c/qt/qtbase/+/219277

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            wangwenx190 赵 宇航
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes