Fix QWindow::startSystemResize() on Windows

Flip broken check for Qt::MSWindowsFixedSizeDialogHint.
Amends a611c632bb906cf77dd3af29ddd7b166f79ad1b0.

Fixes: QTBUG-82191
Change-Id: Iada62271a2084d7482b634189f77e520dfcbe817
Reviewed-by: André de la Rocha <andre.rocha@qt.io>